# script-runner

./: LICENSE.md  Makefile  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: App.tsx  MonacoEditor.tsx  MonacoThemeGetter.ts  Resizer.css  Resizer.tsx  style.css
types/: monaco-themes.d.ts
